# pacl

./: .gitignore  CMakeLists.txt
include/: averager.hpp  statistics.hpp  timer.hpp
install/: run_tests.sh
source/: hello.cpp  perf_test.cpp
utils/: pacl.sublime-project
